Update dependencies including to the Kubernetes Java Client 13 (#2466)
* Update dependencies

* Use --add-opens